--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asn1crypto==0.24.0
 astroid==2.2.5
+atomicwrites==1.3.0
+attrs==19.1.0
 autopep8==1.4.4
 Babel==2.6.0
 bcrypt==3.1.6
@@ -27,17 +29,23 @@ imagesize==1.1.0
 isort==4.3.17
 Jinja2==2.10.1
 jmespath==0.9.4
+joblib==0.13.2
 jsonschema==2.6.0
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
+more-itertools==7.0.0
 networkx==2.3
 numpy==1.16.3
 packaging==19.0
+pandas==0.24.2
 paramiko==2.4.2
+patsy==0.5.1
+pluggy==0.9.0
 protobuf==3.7.1
 protobuf3-to-dict==0.1.5
+py==1.8.0
 py4j==0.10.7
 pyasn1==0.4.5
 pycodestyle==2.5.0
@@ -46,7 +54,7 @@ Pygments==2.3.1
 pylint==2.3.1
 PyNaCl==1.3.0
 pyparsing==2.4.0
-pyspark==2.4.1
+pytest==4.4.1
 python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==3.13
